--- a/main/CMakeLists.txt
+++ b/main/CMakeLists.txt
@@ -3,7 +3,7 @@
 
 idf_component_register(
     SRCS 				
-    					resultStream.cpp http/uri.cpp  http/headers.cpp http/cookies.cpp http/request.cpp http/response.cpp http/socket/handler.cpp
+    					resultStream.cpp http/uri.cpp http/network.cpp http/headers.cpp http/cookies.cpp http/request.cpp http/response.cpp http/socket/handler.cpp
 						http/socket/socket.cpp http/socket/asyncSocket.cpp
     					http/resource/memory/file.cpp http/server.cpp http/action.cpp http/cookie.cpp
     					hid/usbDevice.cpp
