implement identityManager for sessionManager

--- a/main/CMakeLists.txt
+++ b/main/CMakeLists.txt
@@ -6,12 +6,15 @@ idf_component_register(
     					resultStream.cpp http/uri.cpp http/network.cpp http/headers.cpp http/cookies.cpp http/request.cpp http/response.cpp http/socket/handler.cpp
 						http/socket/socket.cpp http/socket/asyncSocket.cpp
     					http/resource/memory/file.cpp http/server.cpp http/action.cpp http/cookie.cpp
+
+						crypto/hash/sha256Engine.cpp
     					hid/usbDevice.cpp
     					hid/usbModuleAdapter.cpp
     					hid/keyboard.cpp
     					hid/joystick.cpp
     					parsers/keyboard.cpp
-    					wifi/wifi.cpp  
+    					wifi/wifi.cpp
+						sessionManager.cpp
     					main.cpp  
     					
     					
@@ -26,7 +29,7 @@ idf_component_register(
     					./parsers
     					 # optional, add here public include directories
     PRIV_INCLUDE_DIRS   # optional, add here private include directories
-    REQUIRES            freertos nvs_flash esp_event esp_netif esp_wifi esp_https_server esp_timer tinyusb mdns driver bootloader_support	# optional, list the public requirements (component names)
+    REQUIRES            freertos nvs_flash esp_event esp_netif esp_wifi esp_https_server esp_timer tinyusb mdns driver bootloader_support mbedtls	# optional, list the public requirements (component names)
     PRIV_REQUIRES       # optional, list the private requirements
 )
 
