session manager add strict sync implement dummy lock fix typecast of session read iterator(later data has been writeable)

--- a/main/CMakeLists.txt
+++ b/main/CMakeLists.txt
@@ -23,6 +23,8 @@ idf_component_register(
     					. ./exception
     					./http ./http/exception ./http/resource ./http/session ./http/resource/memory ./http/lib/httpparser
     					./http/socket
+						./syncing
+						./crypto
     					./dns
     					./hid
     					./wifi
