fix building issue with DRESOURCE_COMPRESSION flag

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -5,13 +5,17 @@ cmake_minimum_required(VERSION 3.5)
 include($ENV{IDF_PATH}/tools/cmake/project.cmake)
 project(WebKeyboard)
 
-option(RESOURCE_COMPRESSION_ENABLE "Enable resource compression" ON) #[[ changing default value does not affect cache so use full clean or delete ./build ]]
+option(RESOURCE_COMPRESSION "Enable resource compression" ON) #[[ changing default value does not affect cache so use full clean or delete ./build ]]
 set (RESOURCE_SRC_DIR ${PROJECT_DIR}/resource)
 set (RESOURCE_BIN_DIR ${CMAKE_BINARY_DIR}/resource)
 
-message("RESOURCE_COMPRESSION_ENABLE=${RESOURCE_COMPRESSION_ENABLE}")
+message("RESOURCE_COMPRESSION=${RESOURCE_COMPRESSION}")
 
-if(RESOURCE_COMPRESSION_ENABLE)
+#[[configure_file(${COMPONENT_PATH}/make.h.template ${CMAKE_BINARY_DIR}/make.h @ONLY)]]
+configure_file(${PROJECT_DIR}/main/make.h.template ${PROJECT_DIR}/main/make.h @ONLY)
+#[[include_directories(${CMAKE_BINARY_DIR}/make.h)]]
+
+if(RESOURCE_COMPRESSION)
     file(MAKE_DIRECTORY "${RESOURCE_BIN_DIR}")
     function(resource file type)
         message(STATUS "Processing resource: ${file}")
