initial impl of ETag cache

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -15,17 +15,30 @@ message("RESOURCE_COMPRESSION=${RESOURCE_COMPRESSION}")
 configure_file(${PROJECT_DIR}/main/make.h.template ${PROJECT_DIR}/main/make.h @ONLY)
 #[[include_directories(${CMAKE_BINARY_DIR}/make.h)]]
 
+file(REMOVE "${PROJECT_DIR}/main/resourceChecksum.h")
+file(APPEND "${PROJECT_DIR}/main/resourceChecksum.h" "#pragma once \n\n \/\/do not touch! content is auto generated on every build!\n\n")
+
+function(resourceHash file out)
+    get_filename_component(name "${file}" NAME)
+    string(MAKE_C_IDENTIFIER "${name}_checksum" varname)
+    file(SHA256 ${file} "${varname}")
+    file(APPEND "${PROJECT_DIR}/main/resourceChecksum.h" "#define ${varname} \"${${varname}}\"\n")
+    set(${out} "${${varname}}" PARENT_SCOPE)
+endfunction()
+
 if(RESOURCE_COMPRESSION)
     file(MAKE_DIRECTORY "${RESOURCE_BIN_DIR}")
     function(resource file type)
-        message(STATUS "Processing resource: ${file}")
         file(ARCHIVE_CREATE PATHS "${RESOURCE_SRC_DIR}/${file}" OUTPUT "${RESOURCE_BIN_DIR}/${file}.gz" FORMAT raw COMPRESSION GZip COMPRESSION_LEVEL 9)
+        resourceHash("${RESOURCE_BIN_DIR}/${file}.gz" hashVal)
         target_add_binary_data(WebKeyboard.elf ${RESOURCE_BIN_DIR}/${file}.gz  BINARY)
+        message(STATUS "Processing resource: ${file} hash: ${hashVal}")
     endfunction()
 else()
     function(resource file type)
-        message(STATUS "Processing resource: ${file}")
+        resourceHash("${RESOURCE_SRC_DIR}/${file}" hashVal)
         target_add_binary_data(WebKeyboard.elf ${RESOURCE_SRC_DIR}/${file} ${type})
+        message(STATUS "Processing resource: ${file} hash: ${hashVal}")
     endfunction()
 endif()
 
