implement captive mode + dns server +minor refactoring

--- a/main/CMakeLists.txt
+++ b/main/CMakeLists.txt
@@ -4,9 +4,9 @@
 idf_component_register(
     SRCS
 
-    					resultStream.cpp http/uri.cpp http/network.cpp http/headers.cpp http/cookies.cpp http/request.cpp http/response.cpp http/socket/handler.cpp
+    					resultStream.cpp http/uri.cpp http/network.cpp http/headers.cpp http/cookie.cpp http/cookies.cpp http/request.cpp http/response.cpp http/socket/handler.cpp
 						http/socket/socket.cpp http/socket/asyncSocket.cpp
-    					http/resource/memory/file.cpp http/server.cpp http/action.cpp http/cookie.cpp
+    					http/resource/memory/file.cpp http/action.cpp http/server.cpp
 
 						crypto/hash/sha256Engine.cpp
     					hid/usbDevice.cpp
@@ -22,7 +22,7 @@ idf_component_register(
     					# list the source files of this component
     INCLUDE_DIRS        
     					. ./exception
-    					./http ./http/exception ./http/resource ./http/session ./http/resource/memory
+    					./http ./http/exception ./http/resource ./http/session ./http/resource/memory ./http/resource/cache
     					./http/socket
 						./syncing
 						./crypto
@@ -36,7 +36,7 @@ idf_component_register(
     					 # optional, add here public include directories
     PRIV_INCLUDE_DIRS   # optional, add here private include directories
     REQUIRES            freertos nvs_flash esp_event esp_netif esp_wifi esp_https_server esp_timer tinyusb driver bootloader_support mbedtls	# optional, list the public requirements (component names)
-    PRIV_REQUIRES       # optional, list the private requirements
+    PRIV_REQUIRES       dns_server# optional, list the private requirements
 )
 
 target_compile_options(${COMPONENT_LIB} PRIVATE -Wno-terminate)
