--- a/main/make.h.template
+++ b/main/make.h.template
@@ -4,3 +4,5 @@
 
 #cmakedefine01 RESOURCE_COMPRESSION
 #cmakedefine01 RESOURCE_CHECKSUM
+#cmakedefine01 EMBED_CAPTIVE
+#define CAPTIVE_PORTAL_BACK_URL "@CAPTIVE_PORTAL_BACK_URL@"
