--- a/main/make.h.template
+++ b/main/make.h.template
@@ -5,4 +5,6 @@
 #cmakedefine01 RESOURCE_COMPRESSION
 #cmakedefine01 RESOURCE_CHECKSUM
 #cmakedefine01 EMBED_CAPTIVE
+#cmakedefine01 EMBED_CERT
+#cmakedefine01 EMBED_CACERT
 #define CAPTIVE_PORTAL_BACK_URL "@CAPTIVE_PORTAL_BACK_URL@"
