https configuration sanity pass https confirmed as workable with self-signed and ca signed cert

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -64,7 +64,7 @@ endfunction()
 if (EMBED_CERT)
     target_add_binary_data(WebKeyboard.elf "${PROJECT_DIR}/cert/cert.pem"        TEXT)
     target_add_binary_data(WebKeyboard.elf "${PROJECT_DIR}/cert/privkey.pem"     TEXT)
-    if(EXISTS "${PROJECT_DIR}/cacert.pem")
+    if(EXISTS "${PROJECT_DIR}/cert/cacert.pem")
         target_add_binary_data(WebKeyboard.elf "${PROJECT_DIR}/cert/cacert.pem"  TEXT)
         set(EMBED_CACERT ON)
     endif ()
