reduce dns_server component log verbosity to LOG_WARN

--- a/components/dns_server/CMakeLists.txt
+++ b/components/dns_server/CMakeLists.txt
@@ -1,3 +1,5 @@
 idf_component_register(SRCS dns_server.c
                        INCLUDE_DIRS include
                        PRIV_REQUIRES esp_netif)
+
+target_compile_definitions("${COMPONENT_LIB}"  PUBLIC "-DLOG_LOCAL_LEVEL=ESP_LOG_WARN")
