--- a/resource/CMakeLists.txt
+++ b/resource/CMakeLists.txt
@@ -1,33 +1,20 @@
-resource(lib.js      TEXT)
-resource(widget.js   TEXT)
-resource(overlay.js  TEXT)
-resource(favicon.ico BINARY)
-resource(index.html  TEXT)
-resource(index.css   TEXT)
-resource(index.js    TEXT)
-resource(symbols.svg TEXT)
+resource(${WEB_ROOT_SRC}/lib.js      TEXT)
+resource(${WEB_ROOT_SRC}/widget.js   TEXT)
+resource(${WEB_ROOT_SRC}/overlay.js  TEXT)
+resource(${WEB_ROOT_SRC}/favicon.ico BINARY)
+resource(${WEB_ROOT_SRC}/index.html  TEXT)
+resource(${WEB_ROOT_SRC}/index.css   TEXT)
+resource(${WEB_ROOT_SRC}/index.js    TEXT)
+resource(${WEB_ROOT_SRC}/symbols.svg TEXT)
 
 option(EMBED_CAPTIVE "Include captive portal page" OFF)
 set(CAPTIVE_PORTAL_BACK_URL "wkb.local" CACHE STRING "Captive portal back button url")
 
 MESSAGE("EMBED_CAPTIVE=${EMBED_CAPTIVE}")
 
-if (EMBED_CAPTIVE OR FALSE)
-    set(_BUILD_STAGE TRUE)
-else ()
-    set(_BUILD_STAGE FALSE)
-endif ()
-if (_BUILD_STAGE)
-    file(MAKE_DIRECTORY "${CMAKE_CURRENT_LIST_DIR}/build")
-
-    message(STATUS "Building resources")
-
-    if (EMBED_CAPTIVE)
-        configure_file("${CMAKE_CURRENT_LIST_DIR}/captive.html" "${CMAKE_CURRENT_LIST_DIR}/build/captive.html" @ONLY)
-        resource("build/captive.html" TEXT)
-    endif ()
-
-    file(REMOVE_RECURSE "${CMAKE_CURRENT_LIST_DIR}/build")
+if (EMBED_CAPTIVE)
+    configure_file(${WEB_ROOT_SRC}/captive.html ${WEB_ROOT_BIN}/captive.html @ONLY)
+    resource(${WEB_ROOT_BIN}/captive.html TEXT)
 endif ()
 
 
