fix cmake bug with file locations update cookies accordingly with headers add c_<entity> like functions to headers

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -56,7 +56,7 @@ function(resource file type)
         set(embedType BINARY)
         get_filename_component(path "${embedFile}" PATH)
         file(MAKE_DIRECTORY ${path})
-        file(ARCHIVE_CREATE PATHS "${WEB_ROOT_SRC}/${file}" OUTPUT ${embedFile} FORMAT raw COMPRESSION GZip COMPRESSION_LEVEL 9)
+        file(ARCHIVE_CREATE PATHS ${file} OUTPUT ${embedFile} FORMAT raw COMPRESSION GZip COMPRESSION_LEVEL 9)
     else ()
         set(embedFile  ${file})
         set(embedType  ${type})
